--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "4.4.8",
   "description": "Create powerful WhatsApp bots easily",
   "main": "lib/index.js",
+  "bin": {
+    "ckptw": "./lib/Interface/index.js"
+  },
   "scripts": {
     "watch": "tsc --watch",
     "clean": "rimraf lib",
-    "build": "pnpm clean && tsc",
+    "build": "pnpm clean && tsc && node move.js",
+    "postinstall": "pnpm build",
     "example": "pnpm build && pnpm example:build && pnpm example:run",
+    "tailwind": "npx @tailwindcss/cli -i ./src/interface/static/main.css -o ./src/interface/static/style.css --watch",
+    "dev": "pnpm build && ckptw --port 3030 --dev",
     "example:build": "tsc example/app.ts --esModuleInterop --skipLibCheck",
     "example:run": "node example/app.js",
     "build:docs": "rimraf docs && typedoc --options typedoc.json"
@@ -33,25 +39,31 @@
   "author": "JstnLT <jastinlinggar@gmail.com> (jstnlt.my.id) and friends.",
   "license": "MIT",
   "devDependencies": {
+    "@types/ejs": "^3.1.5",
+    "@types/ws": "^8.5.14",
     "link-preview-js": "^3.0.5",
     "rimraf": "^5.0.1",
     "typedoc": "^0.24.8",
     "typedoc-plugin-missing-exports": "^2.0.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "ws": "^8.18.0"
   },
   "dependencies": {
     "@discordjs/collection": "^1.4.0",
     "@hapi/boom": "^10.0.1",
     "@mengkodingan/consolefy": "^1.0.1",
+    "@tailwindcss/cli": "^4.0.4",
     "@whiskeysockets/baileys": "^6.7.9",
+    "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "pino": "^8.11.0",
     "qrcode-terminal": "^0.12.0",
     "undici": "^5.21.0"
   },
   "peerDependencies": {
-    "sharp": "^0.32.6",
     "jimp": "^0.16.1",
-    "link-preview-js": "^3.0.0"
+    "link-preview-js": "^3.0.0",
+    "sharp": "^0.32.6"
   },
   "peerDependenciesMeta": {
     "jimp": {
